--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 #VITE_API_URL=https://juntaagua-sjro.onrender.com/apiV2
-VITE_API_URL=http://localhost:4000/apiV
+VITE_API_URL=http://localhost:4000/apiV2
 VITE_API_TO_GET_INFORMATION=https://srienlinea.sri.gob.ec/movil-servicios/api/v1.0/deudas/porIdentificacion/
 IVA = 15
